[WIP] Update panama types for JDK20